word wrap fixes

--- a/assets/css/first.css
+++ b/assets/css/first.css
@@ -15,7 +15,7 @@
     /* margin-left: auto; */
     /* margin-right: auto; */
     max-width: 300px;
-    padding: 0ch 1ch 1ch 1ch;
+    padding: 0ch 5ch 1ch 0;
     word-wrap: break-word;
     /* display: inline-block; */
     /* position: absolute; */
